erDiagram
    WORKSPACE_SNAPSHOT ||--|{ CONTENT_LAYER : contains
    WORKSPACE_SNAPSHOT ||--o{ SOURCE_DOCUMENT : indexes
    WORKSPACE_SNAPSHOT ||--|| SEMANTIC_SNAPSHOT : derives
    CONTENT_LAYER ||--o{ SOURCE_DOCUMENT : owns
    SOURCE_DOCUMENT ||--o{ STATE_DECLARATION : contains
    SOURCE_DOCUMENT ||--o{ COUNTRY_TAG_DECLARATION : contains
    SOURCE_DOCUMENT ||--o{ STRATEGIC_REGION_DECLARATION : contains
    SOURCE_DOCUMENT ||--o{ LOCALISATION_DECLARATION : contains
    LOCALISATION_ENTRY ||--|{ LOCALISATION_DECLARATION : contributions
    STATE_ENTITY ||--|{ STATE_DECLARATION : contributions
    COUNTRY_ENTITY ||--|{ COUNTRY_TAG_DECLARATION : contributions
    STRATEGIC_REGION_ENTITY ||--|{ STRATEGIC_REGION_DECLARATION : contributions
    STATE_ENTITY ||--|| CONTRIBUTION_RESOLUTION : resolves_with
    COUNTRY_ENTITY ||--|| CONTRIBUTION_RESOLUTION : resolves_with
    STRATEGIC_REGION_ENTITY ||--|| CONTRIBUTION_RESOLUTION : resolves_with
    LOCALISATION_ENTRY ||--|| CONTRIBUTION_RESOLUTION : resolves_with
    CONTRIBUTION_RESOLUTION ||--|{ RESOLVED_CONTRIBUTION : classifies
    STATE_ENTITY ||--o{ STATE_RESOURCE : has
    STATE_ENTITY ||--o{ STATE_PROVINCE : contains
    STRATEGIC_REGION_ENTITY ||--o{ REGION_PROVINCE_CLAIM : contains
    STATE_ENTITY ||--|| STATE_REGION_MEMBERSHIP : derives
    STATE_REGION_MEMBERSHIP ||--o{ PROVINCE_REGION_REFERENCE : explains
    PROVINCE_REGION_REFERENCE }o--o{ REGION_PROVINCE_CLAIM : resolves_against
    STATE_ENTITY ||--o| COUNTRY_REFERENCE : owner
    STATE_ENTITY ||--o{ COUNTRY_REFERENCE : core
    COUNTRY_REFERENCE }o--o| COUNTRY_ENTITY : resolves_to
    STATE_ENTITY ||--o{ SEMANTIC_DIAGNOSTIC : reports
    COUNTRY_ENTITY ||--o{ SEMANTIC_DIAGNOSTIC : reports
    SOURCE_DOCUMENT ||--o{ WORKSPACE_DIAGNOSTIC : reports
    SOURCE_DOCUMENT ||--o{ SOURCE_PROVENANCE : locates
    STATE_DECLARATION ||--o{ SOURCE_PROVENANCE : values_from
    COUNTRY_TAG_DECLARATION ||--o{ SOURCE_PROVENANCE : values_from
    LOCALISATION_DECLARATION ||--o{ SOURCE_PROVENANCE : values_from

    WORKSPACE_SNAPSHOT {
        bigint version PK
        datetime loaded_at
        string display_name
        string game_root
        string active_mod_root "nullable"
    }
    CONTENT_LAYER {
        string layer_id PK
        bigint snapshot_version FK
        enum kind
        string root_path
        int position
        boolean is_writable
    }
    SOURCE_DOCUMENT {
        string document_id PK
        string layer_id FK
        string virtual_path
        string physical_path
        enum load_status
        enum contribution_status
        text source_text "nullable"
        json syntax_tree "nullable"
    }
    SEMANTIC_SNAPSHOT {
        bigint snapshot_version PK
    }
    CONTRIBUTION_RESOLUTION {
        string resolution_id PK
        enum policy
        enum outcome
    }
    RESOLVED_CONTRIBUTION {
        string resolution_id FK
        int ordinal PK
        string layer_id FK
        enum disposition
        string reason
    }
    STATE_DECLARATION {
        string declaration_id PK
        string document_id FK
        int state_id "nullable"
        json candidate_values
        int span_start
        int span_length
    }
    COUNTRY_TAG_DECLARATION {
        string declaration_id PK
        string document_id FK
        string original_tag
        string normalized_tag
        string definition_path
        int span_start
        int span_length
    }
    STRATEGIC_REGION_DECLARATION {
        string declaration_id PK
        string document_id FK
        int strategic_region_id "nullable"
        json name_candidates
        json province_candidates
        int span_start
        int span_length
    }
    LOCALISATION_DECLARATION {
        string declaration_id PK
        string document_id FK
        string language
        string localisation_key
        int version "nullable"
        string value
        int span_start
        int span_length
    }
    LOCALISATION_ENTRY {
        string language PK
        string localisation_key PK
        enum resolution_status
    }
    STATE_ENTITY {
        string entity_id PK
        bigint snapshot_version FK
        int state_id UK
        enum status
        string name "nullable"
        bigint manpower "nullable"
        string state_category "nullable"
    }
    COUNTRY_ENTITY {
        string entity_id PK
        bigint snapshot_version FK
        string normalized_tag UK
        enum status
        string definition_path "nullable"
    }
    STRATEGIC_REGION_ENTITY {
        string entity_id PK
        bigint snapshot_version FK
        int strategic_region_id UK
        enum status
        string name "nullable"
    }
    STATE_RESOURCE {
        string state_entity_id PK
        string resource_name PK
        decimal amount
        string provenance_id FK
    }
    STATE_PROVINCE {
        string state_entity_id PK
        int ordinal PK
        int province_id
        string provenance_id FK
    }
    REGION_PROVINCE_CLAIM {
        string strategic_region_entity_id PK
        int ordinal PK
        int province_id
        string provenance_id FK
    }
    STATE_REGION_MEMBERSHIP {
        string state_entity_id PK
        enum outcome
        int resolved_count
        int missing_count
        int ambiguous_count
    }
    PROVINCE_REGION_REFERENCE {
        string state_entity_id PK
        int state_province_ordinal PK
        int province_id
        enum outcome
        string state_provenance_id FK
    }
    COUNTRY_REFERENCE {
        string reference_id PK
        string state_entity_id FK
        enum role
        string original_tag
        enum outcome
        string target_country_id FK "nullable"
        string candidate_tag "nullable"
        string reason "nullable"
        string provenance_id FK
    }
    SOURCE_PROVENANCE {
        string provenance_id PK
        string document_id FK
        string layer_id FK
        string physical_path
        int span_start
        int span_length
    }
    SEMANTIC_DIAGNOSTIC {
        string diagnostic_id PK
        bigint snapshot_version FK
        string entity_id FK "nullable"
        string provenance_id FK "nullable"
        string code
        enum severity
        string message
    }
    WORKSPACE_DIAGNOSTIC {
        string diagnostic_id PK
        bigint snapshot_version FK
        string document_id FK "nullable"
        string physical_path "nullable"
        int span_start "nullable"
        int span_length "nullable"
        string code
        enum severity
        string message
    }
